@@ -9560,6 +9560,14 @@ name|IllegalArgumentException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -9703,6 +9711,14 @@ name|IllegalArgumentException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -9841,6 +9857,14 @@ name|NullPointerException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -9992,6 +10016,14 @@ name|NullPointerException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -10129,6 +10161,14 @@ name|IllegalArgumentException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -10277,6 +10317,14 @@ name|IllegalArgumentException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -10465,6 +10513,14 @@ name|IllegalArgumentException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
